<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="compatible_devices">Compatible devices</string>
    <string name="back">Back</string>
</resources>
